with-istio/hello-world/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels: 
    app: hello-world    
#  namespace: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: learnistio/helloworld:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          
#              hostPort: 80
#          resources:
#            limits:
#              memory: "128Mi"
#              cpu: "500m"
