with-istio/hello-world/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
#  namespace: api
spec:
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
#  type: NodePort
#  type: LoadBalancer
