with-istio/hello-world/6-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
#  namespace: api
spec:
  hosts:
    - '*'
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: hello-world.default.svc.cluster.local
          port:
            number: 80
